RbA Build/src/objects/Store_Discount__c.object
<CustomObject>
    <description>Junctions object to assign discounts to a store through the store configuration</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>a discount to link to a store</description>
        <inlineHelpText>a discount to link to a store</inlineHelpText>
        <label>Discount</label>
        <referenceTo>Discount__c</referenceTo>
        <relationshipLabel>Store Discounts</relationshipLabel>
        <relationshipName>Store_Discounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The configuration of a store to that the discount will be enabled for</description>
        <inlineHelpText>The configuration of a store to that the discount will be enabled for</inlineHelpText>
        <label>Store Configuration</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>Store Discounts</relationshipLabel>
        <relationshipName>Store_Discounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Store Discount</label>
    <nameField>
        <label>Store Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>